@@ -1,0 +1,10 @@
+title: Lamp runtime of Epson beamers
+agents: snmp
+catalog: hw/environment/epson
+license: GPL
+distribution: check_mk
+description:
+ This check monitors the lamp runtime of Epson beamers.
+
+inventory:
+ One service per beamer is created.
