@@ -1,0 +1,60 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+epson_beamer_lamp_default_levels = (1000*3600, 1500*3600)
+
+
+def inventory_epson_beamer_lamp(info):
+    if info:
+        return [ (None, "epson_beamer_lamp_default_levels") ]
+
+
+def check_epson_beamer_lamp(_no_item, params, info):
+    lamp_hrs = int(info[0][0])
+    lamp_time = lamp_hrs * 3600
+    status = 0
+    infotext = "Operation time: %d h" % lamp_hrs
+    if params:
+        warn, crit = params
+        levelstext = " (warn/crit at %.0f/%.0f hours)" % tuple(map(lambda x: x/3600.0, params))
+        if lamp_time >= crit:
+            status = 2
+        elif lamp_time >= warn:
+            status = 1
+        if status:
+            infotext += levelstext
+    return status, infotext
+
+
+
+check_info['epson_beamer_lamp'] = {
+    "inventory_function"      : inventory_epson_beamer_lamp,
+    "check_function"          : check_epson_beamer_lamp,
+    "service_description"     : "Beamer Lamp",
+    "snmp_info"               : (".1.3.6.1.4.1.1248.4.1.1.1.1", [ "0" ]),
+    "snmp_scan_function"      : lambda oid: "1248" in oid(".1.3.6.1.2.1.1.2.0").lower(),
+    "group"                   : "lamp_operation_time",
+}
