@@ -171,6 +171,7 @@
     * 3878 apc_symmetra: divided into several checks...
             NOTE: Please refer to the migration notes!
     * 3879 ipmi, ipmi_sensors: unified ipmi checks which now work the same way...
+    * 3747 epson_beamer_lamp: New check to monitor the lamp operation time of Epson beamers
     * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
     * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
     * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
